# makeabox

./: .dockerignore  .encryption  .envrc  .envrc.production  .envrc.ruby  .envrc.secrets  .gitignore  .nvmrc  .relaxed-rubocop-2.4.yml  .rspec  .rubocop.yml  .rubocop_makeabox_layout.yml  .rubocop_makeabox_lint.yml  .rubocop_makeabox_style.yml  .rubocop_todo.yml  .scss-lint.yml  BUILD.bazel  Brewfile  Brewfile.lock.json  CHANGELOG.md  Capfile  Dockerfile  Dockerfile.nginx  Gemfile  Guardfile  Makefile  Procfile  README.adoc  README.md  README.rdoc  Rakefile  WORKSPACE  codecov.yml  config.ru  docker-compose.yml  package-lock.json  package.json
.github/workflows/: rspec.yml  rubocop.yml  rubyonrails.yml
app/controllers/: application_controller.rb  home_controller.rb
app/helpers/: application_helper.rb  home_helper.rb
app/models/: application_record.rb  (+1 more)
config/: application.rb  commento.sh.enc  credentials.yml.enc  database.yml  datadog.rb  deploy.rb  environment.rb  logging_filters.yml  makeabox-nginx.conf  newrelic.yml  nginx.conf  puma-docker.rb  puma.rb  routes.rb  secrets.yml  service-smf.xml.erb  settings.yml  sidekiq-pool.yml  sidekiq.yml  systemd.puma.service  unicorn.rb  unicorn.rb.dev
coverage/: .last_run.json  .resultset.json  index.html
db/: structure.sql
exe/: .ports-open-check  kryptonize  lib.bash  ports-open-check  puma-ctl  puma-start  puma-stop  unicorn-init
habitat/: README.md  default.toml  plan.sh
lib/: makeabox.rb
public/: ads.txt  sitemap.xml  wp-login.php
spec/: make_a_box_spec.rb  rails_helper.rb  spec_helper.rb  teaspoon_env.rb
(+200 files in other folders)
